# wasm-migrate-commands

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_main.c  migrate_main.c  request_server.c  shared_object.c  start_main.c
wasm_test_computation/: 3mm_with_cr.wasm  correlation_with_cr.wasm  covariance_with_cr.wasm  floyd-warshall_with_cr.wasm
